#59: Fix iOS - ipad specific style overflow issue

--- a/css/content-block.scss
+++ b/css/content-block.scss
@@ -1,5 +1,6 @@
 
 .content-center {
+    position: relative; // Necessary for specific iOS iPad overflow issue
     display: block; // Necessary for IE11
     margin-top: -26px;
     background: #fff;
